equation 23, 24 are modified to be consistent with equation 4

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,89 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-23 13:39:04 -0400 
+%% Created for Yuka Fujii at 2015-06-25 14:12:02 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{drake1983,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1983ApJ...274L..77D},
+	Author = {{Drake}, S.~A. and {Linsky}, J.~L.},
+	Date-Added = {2015-06-25 18:11:57 +0000},
+	Date-Modified = {2015-06-25 18:12:02 +0000},
+	Doi = {10.1086/184154},
+	Journal = {\apjl},
+	Keywords = {Late Stars, Microwave Spectra, Red Giant Stars, Stellar Winds, Astronomical Maps, Chromosphere, Continuous Spectra, Supergiant Stars, Very Large Array (Vla)},
+	Month = nov,
+	Pages = {L77-L81},
+	Title = {{First detection of winds in red giants by microwave continuum techniques}},
+	Volume = 274,
+	Year = 1983,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/184154}}
+
+@article{reffert2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...574A.116R},
+	Archiveprefix = {arXiv},
+	Author = {{Reffert}, S. and {Bergmann}, C. and {Quirrenbach}, A. and {Trifonov}, T. and {K{\"u}nstler}, A.},
+	Date-Added = {2015-06-25 18:01:28 +0000},
+	Date-Modified = {2015-06-25 18:01:37 +0000},
+	Doi = {10.1051/0004-6361/201322360},
+	Eid = {A116},
+	Eprint = {1412.4634},
+	Journal = {\aap},
+	Keywords = {techniques: radial velocities, planets and satellites: detection, brown dwarfs, planetary systems},
+	Month = feb,
+	Pages = {A116},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Precise radial velocities of giant stars. VII. Occurrence rate of giant extrasolar planets as a function of mass and metallicity}},
+	Volume = 574,
+	Year = 2015,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201322360}}
+
+@article{olnon1975,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1975A%26A....39..217O},
+	Author = {{Olnon}, F.~M.},
+	Date-Added = {2015-06-25 16:57:51 +0000},
+	Date-Modified = {2015-06-25 16:57:57 +0000},
+	Journal = {\aap},
+	Month = mar,
+	Pages = {217-223},
+	Title = {{Thermal bremsstrahlung radiospectra for inhomogeneous objects, with an application to MWC 349.}},
+	Volume = 39,
+	Year = 1975}
+
+@article{panagia1975,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1975A%26A....39....1P},
+	Author = {{Panagia}, N. and {Felli}, M.},
+	Date-Added = {2015-06-25 16:27:41 +0000},
+	Date-Modified = {2015-06-25 16:27:49 +0000},
+	Journal = {\aap},
+	Keywords = {Nebulae, Radiative Transfer, Radio Spectra, Radio Stars, Stellar Envelopes, Stellar Mass Ejection, Electron Energy, Galactic Radiation, Interstellar Radiation, Mass Transfer, Radio Sources (Astronomy)},
+	Month = feb,
+	Pages = {1-5},
+	Title = {{The spectrum of the free-free radiation from extended envelopes}},
+	Volume = 39,
+	Year = 1975}
+
+@article{wright1975,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1975MNRAS.170...41W},
+	Author = {{Wright}, A.~E. and {Barlow}, M.~J.},
+	Date-Added = {2015-06-25 16:22:25 +0000},
+	Date-Modified = {2015-06-25 16:22:35 +0000},
+	Journal = {\mnras},
+	Keywords = {Early Stars, Infrared Spectra, Radio Spectra, Stellar Mass Ejection, Stellar Spectra, Astronomical Models, Infrared Astronomy, Ionized Gases, Radio Astronomy, Stellar Envelopes},
+	Month = jan,
+	Pages = {41-51},
+	Title = {{The radio and infrared spectrum of early-type stars undergoing mass loss}},
+	Volume = 170,
+	Year = 1975}
 
 @article{murphy2015,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
