--- a/ms.tex
+++ b/ms.tex
@@ -241,6 +241,12 @@ Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sq
 \end{equation}
 %where $v_{\odot} \sim 4.0 \times 10^2 $ km/sec. 
 
+\memoYF{comments on ionized fraction??}
+
+\citet{drake1983}
+%\citet{}
+
+
 %The temperature of stellar wind of RGs is expected to be 2 orders of magnitude lower than their main sequence counterparts, mainly because the sound speed of hot corona exceeds the escape speed, i.e., hot corona cannot be confined in the stellar atmosphere \citep{suzuki2008}. 
 %\begin{equation}
 %\frac{T}{T_{\odot}} \sim 10^{-2}
@@ -453,8 +459,10 @@ Figure \ref{fig:planetaryB} displays the estimates of the strength of planetary 
 Given that $\rho _c \propto M_p$  at large $M_p$ and $q_c \propto t^{-1.3} M_p^{2.64}/r_c^2$, the magnetic field is roughly:
 %%%%%%%%%% 
 \begin{eqnarray}
-B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingB} \\
-f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingfc} 
+%B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingB} \\
+B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \label{eq:scalingB} \\
+%f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingfc} 
+f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \label{eq:scalingfc} 
 \end{eqnarray}
 %%%%%%%%%%
 under this model. 
@@ -716,9 +724,6 @@ being confusion limited.}
 %\label{tab:sens}
 %\end{deluxetable}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Discussions}
 \label{s:discussion}
@@ -731,27 +736,6 @@ being confusion limited.}
 
 (Jason?)
 
----
-
-\memoYF{Before}
-
-In the radio range, the brightness source of the radio emission is Rayleigh-Jeans tail of the Planck function, i.e., $S_{\nu } = 2kT\nu^2/c^2$. Recent observations revealed that this dependence on $\nu$ ($f \propto \nu^{\alpha }$ where $\alpha $ is 2) can approximately be extended as low frequency as 1 GHz \citep{gorman2013}, presumably as a result of the wavelength dependence of the opacity (at longer wavelength we see the region further from the center of the stars) and the decreased temperature as the distance from the stars increases. 
-In this paper, we simply assume that the radio emission from the red giants themselves is approximated as a black body radiation at 1000~GHz and proportional to $\nu ^{5/3}$. 
-Thus, the flux from the giants is:
-%%%
-\begin{eqnarray}
-f_{\star } (\nu ) &=& \frac{2R_{\star }^2 k_B T \nu^2}{c^2 d^2}  \\
-&\approx & 1.56 \times 10^{-6} ~\mbox{Jy} \left( \frac{d}{10 ~\mbox{pc}} \right)^{-2} \\
-&& \times \left( \frac{R_{\star }}{10 R_{\odot }} \right)^2 \left( \frac{T_{\star }}{10^{4}~\mbox{K}} \right) \left( \frac{\nu}{1~\mbox{GHz}} \right)^{5/3} 
-\end{eqnarray}
-%%%
-The brightest emission due to interaction with planetary companion to the RGB stars would therefore overwhelm the radio emission from their host stars in the 10-100~MHz range (in the 100-1000~MHz range) unless the stellar radius $R_{\star }$ is larger than $\sim 2000R_{\odot }$ ($\sim 300R_{\odot }$). 
-
-
----
-
-\memoYF{After}
-
 The radio intensity of evolved stars in the range of 10~MHz and 1~GHz is not constrained through observation\memoYF{?}. 
 Above 1~GHz, there are several observations. For example, \citet{gorman2013} reported $\alpha $ Boo ($R_\star = 25.4 R_{\odot }$, $T=4286$ K, $d=11.26$ pc) at 1~GHz is about 70 $\mu$Jy, and $\alpha $ Tau ($R_\star = 44.2  R_{\odot }$, $T=3,910$ K, $d=20.0$ pc) at 3~GHz is about 40 $\mu$Jy. 
 
@@ -762,10 +746,8 @@ f_{\star }(\nu ) &\sim & (0.4-1.375) \times 10^{-3} ~\mbox{Jy} \\
 && \times \left( \frac{d}{10 ~\mbox{pc}} \right)^{-2}  \left( \frac{R_{\star }}{100 R_{\odot }} \right)^2 \left( \frac{\nu}{1~\mbox{GHz}} \right)^{\alpha } 
 \end{eqnarray}
 %%%
-If we assume $\alpha = 0.6$ based on constant property wind model, radio flux at 10~pc at 10~MHz-1~GHz is $\sim$ 25 $\mu$Jy-1 mJy, which is below the estimated radio flux of RGHJs. 
+If we assume $\alpha = 0.6$ based on constant property wind model \citep{wright1975,panagia1975,olnon1975}, radio flux at 10~pc from 10~MHz to 1~GHz is $\sim$ 25 $\mu$Jy-1 mJy, which is below the estimated radio flux of RGHJs. 
 Note that it has also been suggested that the power index $\alpha $ is steeper than 0.6 \citep{gorman2013}, in which case the radio flux from the host star would be even lower. 
-
-\newpage
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
