add a cartoon plot, added ms2.tex which is based on ms.tex but includes sabstantial modification after Ignace et al 2010 was found.

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,31 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-25 14:12:02 -0400 
+%% Created for Yuka Fujii at 2015-06-30 20:04:34 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ignace2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010MNRAS.402.2609I},
+	Archiveprefix = {arXiv},
+	Author = {{Ignace}, R. and {Giroux}, M.~L. and {Luttermoser}, D.~G.},
+	Date-Added = {2015-07-01 00:04:27 +0000},
+	Date-Modified = {2015-07-01 00:04:33 +0000},
+	Doi = {10.1111/j.1365-2966.2009.16085.x},
+	Eprint = {0911.1738},
+	Journal = {\mnras},
+	Keywords = {stars: late-type, stars: mass-loss, planetary systems, radio continuum: stars},
+	Month = mar,
+	Pages = {2609-2616},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Radio emissions from substellar companions of evolved cool stars}},
+	Volume = 402,
+	Year = 2010,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2009.16085.x}}
 
 @article{drake1983,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
