--- a/ms2.tex
+++ b/ms2.tex
@@ -142,7 +142,7 @@ When the host stars evolve off the main sequence and go through the red-giant br
 Accordingly, planetary companions around them at a few AU orbits, if exist, are heated up to the level of canonical hot Jupiters and also subjected to the massive stellar wind. 
 Given that magnetized planets emit radio waves in the interaction with stellar winds, such ``Red-Giant Hot Jupiters'' (RGHJs) may be candidates of bright radio emitters. 
 We estimate the spectral auroral radio intensity of RGHJs employing the ``radiometric Bode's law'' and proposed scaling of planetary magnetic fields. 
-We find that RGHJs might be as bright as canonical hot Jupiters as predicted so far, and thus radio emission from a RGHJ would be visible from a hundred parsec distances with current/future detectors \memoYF{check}. 
+We find that RGHJs might be as bright as canonical hot Jupiters as predicted so far, and thus radio emission from a RGHJ would be visible from a hundred parsec distances with current/future detectors \memoYF{need to rewrite}. 
 
 %Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars. 
 %Red-giant hot Jupiters (RGHJs) are jovian planets orbiting red-giant-branch (RGB) or asymptotic-giant-branch (AGB) stars.
@@ -184,12 +184,21 @@ Jovian planets in orbit around such stars can be transiently heated to hot-Jupit
 They are also subject to a massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significant, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, much higher than that of the Sun, $\sim 10^{-14}M_\odot$/yr . 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could also generate bright radio emission. 
 
-In this paper, we estimate radio emission from RGHJs and examine the potential to detect planetary them. 
-In \S2, we describe our assumptions for stellar wind, planetary magnetosphere, frequency of radio emission, and the scaling of planetary radio emission.
-\S3 presents an estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
-%\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable. 
+Based on this speculation, \citet{ignace2010} examined radio emission from known substellar-mass companions around cool evolved stars. They found that the low ionization fraction of the stellar wind of evolved stars suppresses their radio emission and leads to weak radio emission, probably below the detection limit. 
+
+\color{red}
+In this paper, we argue that the accretion of massive stellar wind onto the planets would emit strong X-ray, which would ionize the hydrogen atoms around the planets. The ionized stellar wind could then interact with the planetary magnetic field in the same way as Solar System planets do. 
+We therefore provide optimistic estimates for highly evolved stars, simply extrapolating the radiometric Bode's law. 
+We do not constrain ourselves to the systems known to have sub-stellar companions, given that the survey of exoplanets around highly evolved stars is not complete; rather, we investigate the parameter space where we can search for radio emission and examine the possibility to detect them with current and future instruments. 
+\color{black}
+
+In \S2, we describe our assumptions for stellar wind, planetary magnetosphere, frequency of radio emission, and the scaling of planetary radio emission. 
+Then, we present an estimate of the spectral radio intensity. Then, we present  an estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters. 
+%
+\S3 discusses the observability of these radio emission from these targets with current and near-future instruments, based on the demographics of 
+%
 \S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the offsetting effect of the electrons spiraling down along the planetary magnetic field.
-Observability with current and near-future instruments is also examined in \S4. 
+%
 Finally, \S5 concludes the paper with a brief summary. 
 
 %Roughly 20\% of the more than 700 \memoYF{check!} currently known exoplanets around main-sequence stars \footnote{See online catalogs such as http://www.openexoplanetcatalogue.com/ \citep{rein2012}, http://exoplanet.eu \citep{schneider_et_al2011}, or http://exoplanets.org \citep{wright_et_al2011} for up-to-date lists.} have masses greater than half of Jupiter's, orbital radii greater than 1~AU, and will become hot Jupiters (i.e., for the present purposes, this means they will receive at least as much irradiation as the currently known hot Jupiters/Neptunes \citep{spiegel+madhusudhan2012}. 
@@ -208,65 +217,26 @@ Then, we discuss the framework to estimate the frequency and intensity of planet
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Assumptions for Stellar Wind}
-\label{ss:stellarwind}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-One important factor in modeling the radio emission due to the interaction between stellar wind and the planetary magnetic field is the density and velocity of stellar wind. 
-The number density of \memoTM{electrons in the (?)} stellar wind, $n$, can be expressed as
-%%%%%%%%%% 
-\begin{equation}
-n = \frac{\dot M_\star}{4\pi a^2 m_p v}
-\label{eq:n}
-\end{equation}
-%%%%%%%%%% 
-where $\dot M_\star$ is the stellar mass loss rate, $a$ is the orbital distance from the star and $m_p$ is proton mass, and $v$ is the velocity of the stellar wind. 
-
-While the solar mass loss rate, $\dot M_\odot$, is $\dot M_\odot \sim 2\times 10^{-14} M_{\odot}$/yr \citep[e.g.,][]{hundhausen1997}, the mass loss rate of red giants is typically $\dot M_\star \sim 10^{-8}-10^{-7} M_{\odot}$/yr 
-\citep{reimers1975}
-, and the rate can be as high as $10^{-5} M_\odot{\rm /yr}$ during the AGB phase
-\citep{schild1989, vassiliadis1993, schoier2001, vanloon2005}.
-Therefore, we have
-%%%%%%%%%% 
-\begin{equation}
-\frac{\dot M_\star}{\dot M_{\odot}} \sim 10^6 - 10^9 . 
-\end{equation}
-%%%%%%%%%% 
-
-On the other hand, the stellar wind velocity becomes smaller because of the small escape velocity (due to the expanded stellar radius).
-%\footnote{Escape velocity is $\sqrt{2GM/r}$.}
-Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_{\star}/R_{\star}}$ ($G$ is the gravitational constant, $M_{\star}$ is the stellar mass, and $R_{\star}$ is the stellar radius), a Solar-mass red giant with radius $R_{\star}=100R_{\odot}$ encounters 10 times as slow stellar wind as that at the Sun, $v_{\odot}$. Thus, 
-\begin{equation}
-\frac{v}{v_{\odot}} \sim 10^{-1} . 
-\end{equation}
-%where $v_{\odot} \sim 4.0 \times 10^2 $ km/sec. 
-
-\memoYF{comments on ionized fraction??}
-
-\citet{drake1983}
-%\citet{}
-
-
-%The temperature of stellar wind of RGs is expected to be 2 orders of magnitude lower than their main sequence counterparts, mainly because the sound speed of hot corona exceeds the escape speed, i.e., hot corona cannot be confined in the stellar atmosphere \citep{suzuki2008}. 
-%\begin{equation}
-%\frac{T}{T_{\odot}} \sim 10^{-2}
-%\end{equation}
-%where $T_{\odot } \sim 10^6$ K. 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Assumptions for Planetary Magnetic Field}
 \label{ss:magneticfield}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 We estimate the planetary magnetic field of general planets  
-simply by scaling the Jovian magnetosphere at the surface $B_J \sim 10$ G according to the planetary mass and age, based on the predicted scaling relation described below. 
-% we adopt a simple scaling relation between the magnetic field and macroscopic planetary properties. 
-
+simply by scaling the Jovian magnetosphere at the surface $B_J \sim 10$ G. 
 So far, several scaling relations for the planetary magnetic field strength  
 have been proposed \citep[e.g.][]{russel1978,busse1976,stevenson1979,mizutani1992,sano1993,starchenko2002,christensen2006,christensen_et_al2009} %\memoYF{check!}
 %(see \citet{griesmeier2004} or \citet{christensen2010} for the summary), 
 which are summarized and compared with numerical simulations in \citet{christensen2010}. 
-We employ the scaling law proposed in \citet{christensen_et_al2009}, which is based on the assumption that the ohmic dissipation energy is a fraction of available convected energy and was found to be in a good agreement with the numerical experiments over a wide parameter space and with known objects from the Earth to stars: 
+We write the scaling laws as follows:
+%%%%%%%%%%
+\begin{equation}
+B^2 \propto \omega ^\alpha M_p^\beta t^\gamma \label{eq:Bscaling0}
+\end{equation}
+%%%%%%%%%%
+where $\omega $ is the spin rotation rate, $M_p$ is the planetary mass, and $t$ is the age of the planet. 
+Fiducial values we employ are $\alpha = 0$, $\beta \sim 1$, and $\gamma \sim -0.43$, which are obtained based on the following assumptions. 
+
+First, we adopt the scaling law proposed in \citet{christensen_et_al2009} \citep[see also][]{reiners2010}, which is based on the assumption that the ohmic dissipation energy is a fraction of available convected energy and was found to be in a good agreement with the numerical experiments over a wide parameter space and with known objects from the Earth to stars: 
 %\memoYF{describe in more detail}:
 %%%%%%%%%% 
 %\begin{equation}
@@ -286,7 +256,7 @@ B \propto B_{\rm dynamo} \left( \frac{r_{\rm dynamo}}{R_p} \right)^3.  \label{eq
 \end{equation}
 %%%%%%%%%%
 where $r_{\rm dynamo}$ is the radius of the outer boundary of the dynamo region. 
-
+%
 Note that the scaling law, equation (\ref{eq:Bscaling}), would be reasonable only for the rapidly rotating objects. Indeed, unlike canonical hot Jupiters, RGHJs are not subjected to tidal lock and we do not have to assume slow spin rotation rate for them \citep{spiegel+madhusudhan2012}. Thus, we implicitly assume that RGHJs we consider are rapidly rotating so that they generate  planetary magnetic fields through the same mechanism as Jupiter. 
 
 
@@ -302,44 +272,82 @@ We determine the radius of outer boundary of the dynamo region, $r_{\rm dynamo}$
 In the case of Jupiter, $r_{\rm dynamo, J} = 0.85 R_{\rm J}$ and $\rho_{\rm dynamo, J} = 1.899~{\rm g/cm}^3$  .  
 
 The scaling of convected heat flux at the outer boundary, $q_o$, is obtained by dividing the age-dependent net planetary luminosity by the surface area of the core region, i.e., $4\pi r_{\rm dynamo}^2$. 
-The model of luminosity evolution is taken from \citet{burrows_et_al2001} \citep[see also][]{marley2007}, which resulted in:
+The model of luminosity evolution is taken from \citet{burrows_et_al2001} \citep[see also][]{marley2007}. Ignoring the relatively weak dependence on  average atmospheric Rosseland mean opacity, the result leads to:
 %%%%%%%%%%
 \begin{equation}
-L \sim 1.84\times10^{-10} L_\odot \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \, 	
+L \sim 1.84\times10^{-10} L_\odot \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3}  \, 	
 \label{eq:burrowsLum}
 \end{equation}
 %%%%%%%%%%
-\memoYF{dependence on Rossland mean opacity} Therefore, we have
+Therefore, we have
 %%%%%%%%%%
 \begin{equation}
-q_o \sim q_{o, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{r_c}{r_{c,\,J}} \right)^{-2}\, .
+q_o \sim q_{o, J} \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3}  \left( \frac{r_{\rm dynamo}}{r_{{\rm dynamo},\,J}} \right)^{-2}\, .
 \label{eq:burrowsHeatFlux}
 \end{equation}
 %%%%%%%%%%
 
-We note that the scaling relation based on \citet{christensen_et_al2009}, or equation (\ref{eq:Bscaling}), has also been adopted in \citet{reiners2010}. While the detailed treatment of $\rho _c$ and $q_o$ are different, two estimates of planetary magnetic field strength are fairly close, as shown in \S3 below. 
-
-
-
-%We estimate the convected heat flux by dividing this luminosity by the surface area of the core region, i.e., $4 \pi r_c^2$. 
-
-%\memoYF{I am not sure if the following paragraph is needed.}
-%There also exist several other scaling relations proposed so far, which is compared in \citet{christensen2010}. 
-%In particular, \citet{griesmeier2004} estimated radio emission of discovered exoplanets based on the following scaling relationship: 
+Substituting equation (\ref{eq:burrowsHeatFlux}) into equation (\ref{eq:Bscaling2}) and given that $r_{\rm dynamo} $ does not change significantly, the magnetic field is roughly, we find that:
 %%%%%%%%%% 
-%\begin{equation}
-%\mathcal{M} \propto  \omega ^{\alpha } \rho_c ^{\beta } r_c^{\gamma } \sigma ^{\delta }
-%\end{equation}
+\begin{equation}
+%B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingB} \\
+B   \sim   10~{\rm G} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \label{eq:scalingB}
+\end{equation}
 %%%%%%%%%%
-%where $\omega $ is the spin angular velocity and $\sigma $ is the conductivity of the ``dynamo region'', which is assumed to be same as Jupiter. 
-%The scaling indexes are estimated to be $\alpha \sim 1/2-1$, $\beta \sim 1/2$, $\gamma \sim 3-4$, and $\sigma \sim -1/2-0$. 
-%
-%Unlike canonical hot jupiters, RGHJs are not subject to tidal lock, as the gravitational effects of their host star does not change even if the star evolves into red giants. Without no physical insights of the typical spin rate, we could assume that of Jupiter: $\omega = 9.925$ [hr]. 
+under this model. 
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{Cut-off frequency}
-%\label{ss:cutoff}
+\subsection{Assumptions for Stellar Wind}
+\label{ss:stellarwind}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+One important factor in modeling the radio emission due to the interaction between stellar wind and the planetary magnetic field is the density and velocity of stellar wind. 
+The number density of electrons in the stellar wind, $n$, can be expressed as
+%%%%%%%%%% 
+\begin{equation}
+n = \frac{\dot M_\star}{4\pi a^2 m_p v}
+\label{eq:n}
+\end{equation}
+%%%%%%%%%% 
+where $\dot M_\star$ is the stellar mass loss rate, $a$ is the orbital distance from the star and $m_p$ is proton mass, and $v$ is the velocity of the stellar wind. 
+
+The mass-loss rate, $\dot M_{\star }$, may be expressed in terms of the stellar radius in unit of solar radius, $R_{\star }$, the stellar luminosity in unit of solar luminosity, $L_{\star }$, and the stellar mass in unit of solar mass, $M_{\star }$ \citep{reimers1975}:
+%%%%%%%%%%
+\begin{equation}
+\dot M_\star [M_\odot{\rm /yr}] \sim 4 \times 10^{-13} \eta \left( \frac{R_{\star }}{R_{\odot }} \right)\left( \frac{L_{\star }}{L_{\odot }} \right) \left( \frac{M_\star}{M_\odot} \right)^{-1}
+\end{equation}
+%%%%%%%%%%
+where $\eta \sim 0.3-3$. 
+For example, for a star with $R_\star = 100 R_\odot $, $T_{\rm eff} = 4000 K$ (and thus $L_\star  = R_{\star }^2 T_{\star }^4 \sim 2262 L_\odot $) and $M_\star = M_\odot $ gives $\dot M_\star \sim 10^{-7} M_{\odot }$/yr. 
+This is about 7 orders of magnitude larger than the solar mass loss rate, $\dot M_\odot \sim 2\times 10^{-14} M_{\odot}$/yr \citep[e.g.,][]{hundhausen1997}. 
+The mass loss rate can be even as high as $10^{-5} M_\odot{\rm /yr}$ during the AGB phase
+\citep{schild1989, vassiliadis1993, schoier2001, vanloon2005}. 
+
+
+On the other hand, the stellar wind velocity becomes smaller because of the small escape velocity (due to the expanded stellar radius).
+%\footnote{Escape velocity is $\sqrt{2GM/r}$.}
+Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_{\star}/R_{\star}}$ ($G$ is the gravitational constant, $M_{\star}$ is the stellar mass, and $R_{\star}$ is the stellar radius), a Solar-mass red giant with radius $R_{\star}=100R_{\odot}$ encounters 10 times as slow stellar wind as that at the Sun, $v_{\odot}$. Thus, 
+\begin{equation}
+\frac{v}{v_{\odot}} \sim 10^{-1} . 
+\end{equation}
+%where $v_{\odot} \sim 4.0 \times 10^2 $ km/sec. 
+
+
+
+
+\memoYF{comments on ionized fraction??}
+
+\citet{drake1983}
+%\citet{}
+
+
+%The temperature of stellar wind of RGs is expected to be 2 orders of magnitude lower than their main sequence counterparts, mainly because the sound speed of hot corona exceeds the escape speed, i.e., hot corona cannot be confined in the stellar atmosphere \citep{suzuki2008}. 
+%\begin{equation}
+%\frac{T}{T_{\odot}} \sim 10^{-2}
+%\end{equation}
+%where $T_{\odot } \sim 10^6$ K. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -354,6 +362,12 @@ f_{\rm cyc} = \frac{eB}{2\pi m_e} \approx 27.9 {\rm~MHz} \left( \frac{B}{10 \rm~
 \end{equation}
 %%%%%%%%%%
 where $e$ and $m_e$ are the charge and mass of the electron, respectively.
+Using equation (\ref{eq:scalingB}), 
+%%%%%%%%%% 
+\begin{equation}
+f_{\rm cyc} \sim  28~{\rm MHz} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} . \label{eq:scalingfc} 
+\end{equation}
+%%%%%%%%%%
 
 Radio emission from the planet is observable from ground only when the maximum frequency is larger than the plasma frequency of Earth's ionosphere $f_{\rm plasma}^\oplus$ and the maximum plasma frequency along the line of sight $f_{\rm plasma}^{\rm los}$.
 The plasma frequency may be expressed as
@@ -445,7 +459,7 @@ The bandwidth, $\Delta f$, is assumed to be proportional to the representative f
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Results}
+\section{Estimates}
 \label{s:result}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -456,16 +470,6 @@ The bandwidth, $\Delta f$, is assumed to be proportional to the representative f
 
 
 Figure \ref{fig:planetaryB} displays the estimates of the strength of planetary magnetic field $B$ based on the scaling relation in \S\ref{ss:magneticfield} and the corresponding cyclotron frequency ($f_{\rm cyc}$), as well as the core radius ($r_c$), core density ($\rho_c$), and convected heat flux ($q_o$), as functions of planetary mass and the age. 
-Given that $\rho _c \propto M_p$  at large $M_p$ and $q_c \propto t^{-1.3} M_p^{2.64}/r_c^2$, the magnetic field is roughly:
-%%%%%%%%%% 
-\begin{eqnarray}
-%B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingB} \\
-B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \label{eq:scalingB} \\
-%f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingfc} 
-f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.04} \label{eq:scalingfc} 
-\end{eqnarray}
-%%%%%%%%%%
-under this model. 
 
 Note that the cyclotron frequency of Jovian planets typically falls between 10~MHz, the plasma cut-off frequency of Earth's ionosphere, and less than 1~GHz. 
 In this regime, there are a number of current and near-future radio wave detectors including UTR-2, LOFAR, LWA, and SKA. 
