cartoon figure is inserted

--- a/ms2.tex
+++ b/ms2.tex
@@ -738,7 +738,6 @@ being confusion limited.}
 \label{ss:RGradio}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-(Jason?)
 
 The radio intensity of evolved stars in the range of 10~MHz and 1~GHz is not constrained through observation\memoYF{?}. 
 Above 1~GHz, there are several observations. For example, \citet{gorman2013} reported $\alpha $ Boo ($R_\star = 25.4 R_{\odot }$, $T=4286$ K, $d=11.26$ pc) at 1~GHz is about 70 $\mu$Jy, and $\alpha $ Tau ($R_\star = 44.2  R_{\odot }$, $T=3,910$ K, $d=20.0$ pc) at 3~GHz is about 40 $\mu$Jy. 
@@ -750,8 +749,17 @@ f_{\star }(\nu ) &\sim & (0.4-1.375) \times 10^{-3} ~\mbox{Jy} \\
 && \times \left( \frac{d}{10 ~\mbox{pc}} \right)^{-2}  \left( \frac{R_{\star }}{100 R_{\odot }} \right)^2 \left( \frac{\nu}{1~\mbox{GHz}} \right)^{\alpha } 
 \end{eqnarray}
 %%%
-If we assume $\alpha = 0.6$ based on constant property wind model \citep{wright1975,panagia1975,olnon1975}, radio flux at 10~pc from 10~MHz to 1~GHz is $\sim$ 25 $\mu$Jy-1 mJy, which is below the estimated radio flux of RGHJs. 
-Note that it has also been suggested that the power index $\alpha $ is steeper than 0.6 \citep{gorman2013}, in which case the radio flux from the host star would be even lower. 
+Constant property wind model \citep{wright1975,panagia1975,olnon1975} predicts $\alpha = 0.6$, while observations suggested that the power index $\alpha $ is steeper than 0.6 \citep{gorman2013}. 
+Figure \ref{fig:cartoon} show a cartoon for a radio spectrum of a Jovian-mass RGHJs and that of the host red giant stars with 100 $R_{\odot }$, both of which is placed at 10 pc away.  
+As this figure indicates, the radio emission from RGHJs. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[htbp]
+   \plotoneh{cartoon.pdf}
+   \caption{A cartoon of radio emission spectra of a Jovian-mass RGHJ and the host red giants with 100 $R_{\odot }$. The spectrum of RGHJ is modeled after Jovian radio spectra \citep[][e.g.]{zarka2004}, while that of the host red giant is obtained simply by extrapolating observed radio spectra above 1~GHz with power law. }
+  \label{fig:cartoon}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
